<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_margin="10dp"
        android:layout_above="@id/editTextTextEmailAddress"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/travel" />
    <EditText
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_bg"
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp"
        android:hint="@string/email"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:layout_above="@id/editTextTextPassword"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:background="@drawable/edittext_bg"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp"
        android:hint="@string/password"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:layout_above="@id/button"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:onClick="loginUser"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:theme="@style/Button"
        android:background="@drawable/button_bg"
        android:layout_above="@id/linearLayout1"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user" />

        <TextView
            android:id="@+id/textView2"
            android:paddingHorizontal="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="registerIntent"
            android:text="@string/register_here"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextPassword"
        android:layout_alignEnd="@+id/editTextTextPassword"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/forgot"
        android:onClick="resetPassword"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_created_please_verify_your_email_and_login_again"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_above="@id/editTextTextEmailAddress"
        android:textColor="@android:color/holo_blue_light"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:elevation="4dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>