<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/our_services"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="15dp"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/view_more"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="15dp"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView15"/>

    <TextView
        android:id="@+id/text_home"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment" />

</RelativeLayout>