<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_margin="10dp"
        android:layout_above="@id/editTextTextPersonName"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/register" />

    <EditText
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextTextPersonName"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp"
        android:hint="@string/name"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:layout_above="@id/editTextTextEmailAddress2"
        android:inputType="textPersonName" />

    <EditText
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_bg"
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp"
        android:hint="@string/email"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:layout_above="@id/editTextTextPassword2"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:background="@drawable/edittext_bg"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp"
        android:hint="@string/password"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:layout_above="@id/button2"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:onClick="RegisterUser"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:theme="@style/Button"
        android:background="@drawable/button_bg"
        android:layout_above="@id/linearLayout"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_a_user" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_here"
            android:layout_marginHorizontal="5dp"
            android:textStyle="bold"
            android:onClick="loginIntent"
            android:textColor="@android:color/holo_blue_light" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        android:elevation="4dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>