<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.aboutus.AboutUsFragment">

    <TextView
        android:id="@+id/text_aboutus"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/about" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_as_bus"
                android:layout_below="@id/imageView4"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textSize="17sp"
                android:layout_below="@id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_one"/>
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/as_bus_booking"
                android:layout_below="@id/textView8"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textSize="17sp"
                android:layout_below="@id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_two"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
